# nova-net

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  nova-net.cabal
.github/workflows/: ci.yml  publish.yml
bench/: Main.hs
cbits/: nn_ack_process.c  nn_ack_process.h  nn_bandwidth.c  nn_bandwidth.h  nn_batch.c  nn_batch.h  nn_congestion.c  nn_congestion.h  nn_crc32c.c  nn_crc32c.h  nn_crypto.c  nn_crypto.h  nn_ffi.c  nn_ffi.h  nn_fragment.c  nn_fragment.h  nn_packet.c  nn_packet.h  nn_random.c  nn_random.h  nn_rtt.c  nn_rtt.h  nn_seq.c  nn_seq.h  nn_siphash.c  nn_siphash.h  nn_wire.h  test_ack_process.c  test_bandwidth.c  test_congestion.c  test_crc32c.c  test_crypto.c  test_fragment_batch.c  test_packet.c  test_rtt.c  test_seq.c
src/: NovaNet.hs
src/NovaNet/: Channel.hs  Class.hs  Config.hs  Congestion.hs  Connection.hs  Fragment.hs  Mtu.hs  Net.hs  Peer.hs  Reliability.hs  Security.hs  Simulator.hs  Stats.hs  TestNet.hs  Types.hs
src/NovaNet/FFI/: AckProcess.hs  Bandwidth.hs  Batch.hs  CRC32C.hs  Congestion.hs  Crypto.hs  Fragment.hs  LossWindow.hs  Packet.hs  Random.hs  RecvBuf.hs  Rtt.hs  SentBuf.hs  Seq.hs  SipHash.hs
src/NovaNet/Peer/: Handshake.hs  Migration.hs  Protocol.hs
src/NovaNet/Replication/: Delta.hs  Interest.hs  Interpolation.hs  Priority.hs
test/: Main.hs
