cabal-version:      3.0
name:               nova-net
version:            0.1.0.0
synopsis:           General-purpose reliable UDP with C99 hot path and Haskell protocol logic
description:
  A general-purpose reliable UDP networking library. C99 hot path
  (serialization, send/recv, ack processing, crypto) for maximum
  performance on any platform. Haskell protocol brain (connection
  state machines, congestion control, replication) for
  correct-by-construction logic. Successor to gbnet-hs.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Devon Tomlin
maintainer:         devon.tomlin@novavero.ai
homepage:           https://github.com/Novavero-AI/nova-net
bug-reports:        https://github.com/Novavero-AI/nova-net/issues
category:           Network, Game
stability:          experimental
build-type:         Simple
tested-with:        GHC == 9.8.4
extra-doc-files:
    README.md
    CHANGELOG.md

library
  exposed-modules:
    NovaNet
    NovaNet.Class
    NovaNet.Config
    NovaNet.Types
    NovaNet.FFI.Packet
    NovaNet.FFI.CRC32C
    NovaNet.FFI.Seq
    NovaNet.FFI.Fragment
    NovaNet.FFI.Batch
    NovaNet.FFI.Crypto
    NovaNet.FFI.Bandwidth

  c-sources:
    cbits/nn_packet.c
    cbits/nn_crc32c.c
    cbits/nn_seq.c
    cbits/nn_fragment.c
    cbits/nn_batch.c
    cbits/nn_crypto.c
    cbits/nn_bandwidth.c
    cbits/nn_ffi.c

  include-dirs:     cbits
  cc-options:       -std=c99 -Wall -Wextra -Wpedantic -Werror

  build-depends:
      base          >= 4.19 && < 5
    , bytestring    >= 0.11 && < 0.13
    , containers    >= 0.6  && < 0.8
    , deepseq       >= 1.4  && < 1.6
    , mtl           >= 2.2  && < 2.4
    , network       >= 3.1  && < 3.3
    , stm           >= 2.5  && < 2.6
    , transformers  >= 0.5  && < 0.7

  hs-source-dirs:   src
  default-language:  Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -fspecialise-aggressively
    -fexpose-all-unfoldings

test-suite nova-net-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
      base          >= 4.19 && < 5
    , nova-net
    , bytestring    >= 0.11 && < 0.13
    , QuickCheck    >= 2.14 && < 2.16
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat

benchmark nova-net-bench
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   bench
  default-language: Haskell2010
  ghc-options:      -rtsopts -Wall -Wcompat
  build-depends:
      base          >= 4.19 && < 5
    , bytestring    >= 0.11 && < 0.13
    , criterion     >= 1.5  && < 1.7
    , deepseq       >= 1.4  && < 1.6
    , nova-net

source-repository head
  type:     git
  location: https://github.com/Novavero-AI/nova-net
  branch:   main
