cabal-version:      3.0
name:               nova-net
version:            0.1.0.0
synopsis:           General-purpose reliable UDP with C99 hot path and Haskell protocol logic
description:
  A general-purpose reliable UDP networking library. C99 hot path
  (serialization, send/recv, ack processing, crypto) for maximum
  performance on any platform. Haskell protocol brain (connection
  state machines, congestion control, replication) for
  correct-by-construction logic. Successor to gbnet-hs.

license:            BSD-3-Clause
license-file:       LICENSE
author:             Devon Tomlin
maintainer:         devon.tomlin@novavero.ai
homepage:           https://github.com/Novavero-AI/nova-net
bug-reports:        https://github.com/Novavero-AI/nova-net/issues
category:           Network, Game
stability:          experimental
build-type:         Simple
tested-with:        GHC == 9.8.4
extra-doc-files:
    README.md
    CHANGELOG.md
extra-source-files:
    cbits/nn_ack_process.h
    cbits/nn_bandwidth.h
    cbits/nn_batch.h
    cbits/nn_congestion.h
    cbits/nn_crc32c.h
    cbits/nn_crypto.h
    cbits/nn_ffi.h
    cbits/nn_fragment.h
    cbits/nn_packet.h
    cbits/nn_random.h
    cbits/nn_rtt.h
    cbits/nn_seq.h
    cbits/nn_siphash.h
    cbits/nn_wire.h

library
  exposed-modules:
    NovaNet
    NovaNet.Class
    NovaNet.Config
    NovaNet.Types
    NovaNet.FFI.Packet
    NovaNet.FFI.CRC32C
    NovaNet.FFI.Seq
    NovaNet.FFI.Fragment
    NovaNet.FFI.Batch
    NovaNet.FFI.Crypto
    NovaNet.FFI.Bandwidth
    NovaNet.FFI.Rtt
    NovaNet.FFI.SentBuf
    NovaNet.FFI.LossWindow
    NovaNet.FFI.AckProcess
    NovaNet.FFI.Congestion
    NovaNet.FFI.RecvBuf
    NovaNet.FFI.SipHash
    NovaNet.FFI.Random
    NovaNet.Reliability
    NovaNet.Channel
    NovaNet.Congestion
    NovaNet.Connection
    NovaNet.Fragment
    NovaNet.Mtu
    NovaNet.Security
    NovaNet.Stats
    NovaNet.Peer
    NovaNet.Peer.Protocol
    NovaNet.Peer.Handshake
    NovaNet.Peer.Migration
    NovaNet.Net
    NovaNet.Replication.Delta
    NovaNet.Replication.Interest
    NovaNet.Replication.Priority
    NovaNet.Replication.Interpolation
    NovaNet.TestNet
    NovaNet.Simulator

  c-sources:
    cbits/nn_packet.c
    cbits/nn_crc32c.c
    cbits/nn_seq.c
    cbits/nn_fragment.c
    cbits/nn_batch.c
    cbits/nn_crypto.c
    cbits/nn_bandwidth.c
    cbits/nn_rtt.c
    cbits/nn_ack_process.c
    cbits/nn_congestion.c
    cbits/nn_siphash.c
    cbits/nn_random.c
    cbits/nn_ffi.c

  include-dirs:     cbits
  cc-options:       -std=c99 -Wall -Wextra -Wpedantic -Werror

  if os(windows)
    extra-libraries:  bcrypt

  build-depends:
      base          >= 4.19 && < 5
    , bytestring    >= 0.11 && < 0.13
    , containers    >= 0.6  && < 0.8
    , deepseq       >= 1.4  && < 1.6
    , mtl           >= 2.2  && < 2.4
    , network       >= 3.1  && < 3.3
    , stm           >= 2.5  && < 2.6
    , transformers  >= 0.5  && < 0.7

  hs-source-dirs:   src
  default-language:  Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -haddock
    -fspecialise-aggressively
    -fexpose-all-unfoldings

test-suite nova-net-test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  build-depends:
      base          >= 4.19 && < 5
    , nova-net
    , bytestring    >= 0.11 && < 0.13
    , containers    >= 0.6  && < 0.8
    , network       >= 3.1  && < 3.3
    , QuickCheck    >= 2.14 && < 2.16
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat

benchmark nova-net-bench
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   bench
  default-language: Haskell2010
  ghc-options:      -rtsopts -Wall -Wcompat
  build-depends:
      base          >= 4.19 && < 5
    , bytestring    >= 0.11 && < 0.13
    , criterion     >= 1.5  && < 1.7
    , deepseq       >= 1.4  && < 1.6
    , nova-net

source-repository head
  type:     git
  location: https://github.com/Novavero-AI/nova-net
  branch:   main
